--- a/public_html/index.html
+++ b/public_html/index.html
@@ -12,6 +12,7 @@
     >
         <input type="file"
                name="file"
+               required="required"
         />
         <input type="submit"
                value="Загрузить"
